--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "../webserver-performance-data/node_modules/.bin/jest",
-    "start": "node src/app.js"
+    "start": "node src/index.js"
   },
   "jest": {
     "testEnvironment": "node",
